Bug 107822 - EDITING: Pattern created with pattern editor isn't applied when pressing apply
Summary: EDITING: Pattern created with pattern editor isn't applied when pressing apply
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha1+
Hardware: All All
: medium minor
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:5.4.0 target:5.4.0.1
Keywords:
Depends on:
Blocks: Area-Fill-Tab
  Show dependency treegraph
 
Reported: 2017-05-13 14:58 UTC by Telesto
Modified: 2017-05-26 19:24 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2017-05-13 14:58:34 UTC
Description:
Pattern created with pattern editor isn't applied when pressing apply

Steps to Reproduce:
1. Open Writer 
2. Toolbar -> Format -> Page
3. Area tab
4. Pattern button
5. Create a pattern in the pattern editor 
6. Press apply or OK ->  Nothing happens
7. Compare with Gradient

Actual Results:  
Created pattern isn't applied


Expected Results:
The pattern should be applied 


Reproducible: Always

User Profile Reset: No

Additional Info:
Version: 5.4.0.0.alpha1+
Build ID: 970b431f1a7b6b96c4c9536657ce4fe9d8f5b585
CPU threads: 4; OS: Windows 6.2; UI render: default; 
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2017-05-11_23:07:53
Locale: en-US (nl_NL); Calc: single


User-Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:45.0) Gecko/20100101 Firefox/45.0
Comment 1 Buovjaga 2017-05-14 12:00:02 UTC
Works for me. I wonder, if it got fixed in the past couple of days.

Version: 5.4.0.0.alpha1+
Build ID: c90510acfe1ec042adf27452e311964a770965a6
CPU threads: 4; OS: Windows 6.2; UI render: default; 
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2017-05-13_21:42:54
Locale: fi-FI (fi_FI); Calc: group
Comment 2 Telesto 2017-05-14 12:18:26 UTC
The bug still exists. My description is not quite accurate (I removed all the template patterns, that's why I get an empty page). 

Small modification:
1. Open Writer 
2. Toolbar -> Format -> Page
3. Area tab
4. Pattern button
5. Change the color of the pre-selected pattern (Foreground purple, background red)
6. Press apply or OK ->  A black/white pattern will show op (corresponding with the selected template pattern)
7. Compare with Gradient
Comment 3 Buovjaga 2017-05-14 12:38:05 UTC
How do I remove the patterns?
Comment 4 Telesto 2017-05-15 08:43:31 UTC
(In reply to Buovjaga from comment #3)
> How do I remove the patterns?

Deleting the patterns is possible by right clicking a pattern, and select delete. However you don't need to do that :-)

Just follow the steps. 
1. Open Writer 
2. Toolbar -> Format -> Page
3. Area tab
4. Pattern button
5. Select the first template and press apply
6. Change the color of the pre-selected pattern (Foreground purple, background red)
6. Press apply again -> nothing changes
Comment 5 Buovjaga 2017-05-15 15:51:19 UTC
It's true.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.4.0.0.alpha1+
Build ID: c0968aa4673a8ac9a8a09a0e291b58b94bdbb35e
CPU threads: 8; OS: Linux 4.10; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on May 13th 2016
Comment 6 Katarina Behrens (Inactive) 2017-05-16 20:20:38 UTC
*sigh* it'll take ages to find and fix all those cases
Comment 7 Commit Notification 2017-05-20 10:10:52 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7662b11cad6105d56fb9acc9c431c89d3b68dc89

tdf#107822: Apply custom pattern even if not saved as preset

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2017-05-22 08:34:33 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2861230f3752ad557c10ad2858e040e22b3801ad&h=libreoffice-5-4

tdf#107822: Apply custom pattern even if not saved as preset

It will be available in 5.4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.