tdf#107822: Apply custom pattern even if not saved as preset

do the same ff1f83dd08b7b0169301ffe0a53499a27af613b9 does for
gradients and hatches also here.
Additionally remove bool member variable, no eye deer what its
purpose was anyway, it was written multiple times but never read

Change-Id: Iebb811906e92827969da028ee66d90ac477b0bdf
Reviewed-on: https://gerrit.libreoffice.org/37690
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
Tested-by: Katarina Behrens <Katarina.Behrens@cib.de>
(cherry picked from commit 7662b11cad6105d56fb9acc9c431c89d3b68dc89)
Reviewed-on: https://gerrit.libreoffice.org/37851
Tested-by: Jenkins <ci@libreoffice.org>